# my_playground

./: .gitignore  README.md
.github/workflows/: ci.yml
django_playground/: README.md  manage.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  requirements_for_test.txt  tox.ini
django_playground/card/: models.py  urls.py  views.py
django_playground/card/migrations/: 0001_initial.py
django_playground/card/tests/: test_forms.py  test_models.py  test_views.py
django_playground/sample/: .gitignore  forms.py  models.py  urls.py  views.py
django_playground/sample/migrations/: 0001_initial.py
django_playground/sample/tests/: factory.py  test_forms.py  test_models.py  test_views.py
django_playground/sampleproject/: settings.py  urls.py
django_playground/templates/card/: base.html  card_create.html  card_list.html
django_playground/templates/sample/: card_create.html  card_list.html
useless/: LICENSE.txt  README.md  pyproject.toml
useless/src/useless/: __about__.py  __init__.py
useless/tests/: __init__.py  test_useless.py
