[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "useless"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Hayao Suzuki", email = "hayao.math@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Hayao Suzuki/useless#readme"
Issues = "https://github.com/Hayao Suzuki/useless/issues"
Source = "https://github.com/Hayao Suzuki/useless"

[tool.hatch.version]
path = "src/useless/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/useless tests}"

[tool.coverage.run]
source_pkgs = ["useless", "tests"]
branch = true
parallel = true
omit = [
  "src/useless/__about__.py",
]

[tool.coverage.paths]
useless = ["src/useless", "*/useless/src/useless"]
tests = ["tests", "*/useless/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
