[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "useless"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Hayao Suzuki", email = "hayao.math@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Hayao Suzuki/useless#readme"
Issues = "https://github.com/Hayao Suzuki/useless/issues"
Source = "https://github.com/Hayao Suzuki/useless"

[tool.hatch.version]
path = "src/useless/__about__.py"

[tool.hatch.envs.default]
installer = "uv"

[tool.hatch.envs.hatch-test]
dependencies = [
    "hypothesis==6.100.*",
    "pytest==8.*",
    "pytest-randomly==3.15.*",
]

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy==1.10.*",
]
[tool.hatch.envs.types.scripts]
check = "mypy --strict {args:src}"
